# codewith

./: .bazelrc  .codespellignore  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CODEWITH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODIFICATIONS.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  announcement_tip.toml  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.codewith/: CODEWITH.md
.codewith/environments/: environment.toml  setup.py
.codewith/plans/: active-session-messaging.md
.codewith/rules/: README.md  app-server-background-mcp.md  core-architecture.md  skills-rules-maintenance.md  ui-tui.md  validation-and-landing.md
.devcontainer/: Dockerfile.secure  README.md  devcontainer.json  devcontainer.secure.json  init-firewall.sh  post-start.sh  post_install.py
.github/: CODEOWNERS  dotslash-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-codewith-app.yml  3-cli.yml  4-bug-report.yml  5-feature-request.yml  6-docs-issue.yml
.github/e2b/: README.md  codewith-pr-drain-template.mjs  codewith-pr-drain.Dockerfile
.github/scripts/: build-codex-package-archive.sh  check_windows_bazel_host_tools.py  install-musl-build-tools.sh  prune-bazel-disk-cache.sh  run-bazel-ci.sh  run_bazel_with_buildbuddy.py  test_bazel_workflow.py  test_check_windows_bazel_host_tools.py  test_run_bazel_ci.py  test_run_bazel_with_buildbuddy.py  test_rust_ci_full_nextest_platform_workflow.py  test_rust_ci_workflow.py  test_rusty_v8_bazel.py  test_sdk_workflow.py  test_verify_tui_core_boundary.py  verify-macos-release-artifact.sh  verify_tui_core_boundary.py
.github/workflows/: README.md  bazel.yml  blacksmith-testbox.yml  blob-size-policy.yml  cargo-deny.yml  ci.yml  cla.yml  codespell.yml  codewith-cli.yml  iapp-codex-cli.yml  issue-deduplicator.yml  issue-labeler.yml  open-codex-cli.yml  provider-failure-verify.yml  python-runtime-build.yml  python-sdk-release.yml  remote-rust-bazel.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-ci.yml  rust-release-argument-comment-lint.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml  v8-canary.yml
.takumi/: takumi.db
.terminal/: notes.json
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py  init_firewall.sh  run_in_container.sh  test_build_npm_package.py  test_install_smoke.py
codex-rs/: Cargo.toml  README.md  default.nix  deny.toml
codex-rs/.cargo/: audit.toml
codex-rs/.config/: nextest.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-daemon/: README.md
codex-rs/app-server-test-client/: README.md
codex-rs/app-server-transport/: Cargo.toml
codex-rs/background-agent/: ARCHITECTURE.md  BUILD.bazel  Cargo.toml
codex-rs/background-agent/src/: daemon.rs  lib.rs  process_lifecycle.rs  supervisor.rs
codex-rs/bwrap/: build.rs  config.h
codex-rs/chatgpt/: README.md
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/codex-api/: Cargo.toml  README.md
codex-rs/codex-client/: README.md
codex-rs/codex-mcp/: Cargo.toml
codex-rs/config/: Cargo.toml
codex-rs/connectors/: Cargo.toml
codex-rs/connectors/src/: directory_cache.rs  lib.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  dfa_never.txt  gpt-5.1-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  prompt_with_apply_patch_instructions.md
codex-rs/docs/: codex_mcp_interface.md  external_agent_cursor_composer.md  protocol_v1.md  workflows_first_class.md
codex-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/execpolicy/: Cargo.toml  README.md
codex-rs/ext/workflows/: BUILD.bazel  Cargo.toml
codex-rs/ext/workflows/src/: extension.rs  lib.rs  manager_output.rs  manager_tool.rs  tool.rs
codex-rs/external-agent/: BUILD.bazel  Cargo.toml
codex-rs/external-agent/src/: acp.rs  acp_adapter.rs  acp_windows.rs  claude.rs  claude_acp.rs  claude_auth.rs  claude_windows.rs  contract.rs  cursor.rs  cursor_cloud.rs  cursor_models.rs  cursor_sdk.rs  grok.rs  lib.rs  platform_sandbox.rs  runtimes.rs  safety.rs  windows_cmd_shim.rs  windows_cmd_shim_tests.rs  windows_command.rs
codex-rs/external-agent/src/fixtures/: cmd-shim-5.0.0-node.cmd.golden  cmd-shim-9.0.2-node.cmd.golden
codex-rs/feedback/: Cargo.toml
codex-rs/file-search/: README.md
codex-rs/hooks/: Cargo.toml
codex-rs/known-provider-models/: BUILD.bazel  Cargo.toml
codex-rs/linux-sandbox/: BUILD.bazel  Cargo.toml  README.md
codex-rs/linux-sandbox/src/: bwrap.rs  launcher.rs  linux_run_main_tests.rs  proxy_routing.rs
codex-rs/linux-sandbox/tests/suite/: landlock.rs  managed_proxy.rs
codex-rs/memories/: README.md
codex-rs/model-provider/: Cargo.toml
codex-rs/privacy-filter/: BUILD.bazel  Cargo.toml
codex-rs/privacy-filter/src/: lib.rs  model.rs  readiness.rs
codex-rs/workflows/: BUILD.bazel  Cargo.toml
codex-rs/workflows/src/: ancient_names.rs  branch_prompt.rs  error.rs  lib.rs  parse.rs  spec.rs  tests.rs  validation.rs
docs/: CLA.md  agents_md.md  authentication.md  config.md  contributing.md  example-config.md  exec.md  execpolicy.md  getting-started.md  install.md  license.md  open-source-fund.md  sandbox.md  skills.md  slash_commands.md
macos/: README.md  upstream-codex-behavior-audit.md
scripts/: build_codex_package.py  codewith  debug-codewith.sh  debug-codex.sh  guard-heavy-local-build.sh  iapp-codex  list-bazel-clippy-targets.sh  local-pr-worker-guard.sh  mock_responses_websocket_server.py  open-codex  remote-bazel-validation.sh  run_tui_with_exec_server.sh  stage_npm_packages.py  start-codewith-exec.sh  start-codex-exec.sh  test-remote-env.sh  validate.py
sdk/python-runtime/: README.md  pyproject.toml
sdk/python-runtime/src/codex_cli_bin/: __init__.py
signatures/: cla.json
third_party_licenses/: ripgrep-LICENSE-MIT.txt  ripgrep-UNLICENSE.txt  zsh-LICENCE.txt
(+2287 files in other folders)
