load("@apple_support//xcode:xcode_config.bzl", "xcode_config")

xcode_config(name = "disable_xcode")

# We mark the local platform as glibc-compatible so that rust can grab a toolchain for us.
# TODO(zbarsky): Upstream a better libc constraint into rules_rust.
# We only enable this on linux though for sanity, and because it breaks remote execution.
platform(
    name = "local_linux",
    constraint_values = [
        # We mark the local platform as glibc-compatible because musl-built rust cannot dlopen proc macros.
        "@llvm//constraints/libc:gnu.2.28",
    ],
    parents = ["@platforms//host"],
)

# Architecture-fixed Linux control for the Windows-cross host-tool analysis
# probe. GitHub's Windows runners and their Linux RBE peers are x86_64, while
# contributors may run the probe from an Arm64 workstation.
platform(
    name = "linux_x86_64_ci_analysis",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:clang",
        "@llvm//constraints/libc:gnu.2.28",
    ],
)

platform(
    name = "local_windows",
    constraint_values = [
        "@rules_rs//rs/experimental/platforms/constraints:windows_gnullvm",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "local_windows_msvc",
    constraint_values = [
        "@rules_rs//rs/experimental/platforms/constraints:windows_msvc",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "windows_x86_64_gnullvm",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@rules_rs//rs/experimental/platforms/constraints:windows_gnullvm",
    ],
)

platform(
    name = "windows_x86_64_msvc",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@rules_rs//rs/experimental/platforms/constraints:windows_msvc",
    ],
)

toolchain(
    name = "windows_gnullvm_tests_on_msvc_host_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@rules_rs//rs/experimental/platforms/constraints:windows_msvc",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@rules_rs//rs/experimental/platforms/constraints:windows_gnullvm",
    ],
    toolchain = "@bazel_tools//tools/test:empty_toolchain",
    toolchain_type = "@bazel_tools//tools/test:default_test_toolchain_type",
)

alias(
    name = "rbe",
    actual = "@rbe_platform",
)

exports_files([
    "AGENTS.md",
    "CHANGELOG.md",
    "CODEWITH.md",
    ".codewith/CODEWITH.md",
    "workspace_root_test_launcher.bat.tpl",
    "workspace_root_test_launcher.sh.tpl",
])
