[package]
name = "codex-privacy-filter"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_privacy_filter"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
pretty_assertions = { workspace = true }
