[package]
edition.workspace = true
license.workspace = true
name = "codex-workflows"
version.workspace = true

[lib]
doctest = false
name = "codex_workflows"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
codex-prompts = { workspace = true }
pretty_assertions = { workspace = true }
