[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "openai-codex-cli-bin"
version = "0.1.0"
description = "Pinned Codewith CLI runtime for the Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Hasna" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/hasna/codewith"
Repository = "https://github.com/hasna/codewith"
Issues = "https://github.com/hasna/codewith/issues"

[tool.hatch.build]
exclude = [
  ".venv/**",
  ".pytest_cache/**",
  "dist/**",
  "build/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_cli_bin"]
include = [
  "src/codex_cli_bin/codex-package.json",
  "src/codex_cli_bin/bin/**",
  "src/codex_cli_bin/codewith-resources/**",
  "src/codex_cli_bin/codewith-path/**",
]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.sdist.hooks.custom]

[tool.uv]
exclude-newer = "7 days"
index-strategy = "first-index"

[tool.uv.pip]
exclude-newer = "7 days"
index-strategy = "first-index"
